# pluEngine

./: CMakeLists.txt  README.md  main.cpp
CenterFind2D/: CMakeLists.txt
CenterFind2D/Include/: CenterFind.h  CenterFindEngine.h  FnPtrHelper.h  Solver.cuh  SolverOperators.cuh
CenterFind2D/Source/: CenterFindEngine.cpp  Engine.cpp  Engine.cu  ImageProc.cpp  ImgProc.cpp  Particle.cpp  Solver.cpp  Solver.cu  main.cpp
CenterFind2D/cuda_morph_filter/: filtering.cpp
CenterFind2D/output/: phi41pct_3D_6zoom_gr3_CUDA.txt  phi41pct_3D_6zoom_gr3_IPP.txt  phi41pct_3D_6zoom_gr3_OCL.txt
Link3Dt/: CMakeLists.txt
Link3Dt/Source/: plu_link3Dt.cpp
Struct3Dt/: CMakeLists.txt
Struct3Dt/Include/: plu_analysis_3Dt_071122.h
Struct3Dt/Source/: plu_Struct3Dt_071122.cpp  plu_analysis_3Dt_071122.cpp
